Changed enchant handling to enable Custom Storage enchant. Added custom item for storage with event handlers. New command for storage

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,4 +9,8 @@ commands:
   ce:
     description: The custom enchant command
     permission-message: You do not have permission to use this command
-    usage: "Usage /ce [enchantName] [enchantLevel]"
+    usage: "Usage /ce enchantName enchantLevel"
+  storage:
+    description: Everything to do with custom storage
+    permission-message: You do not have permission to use this command
+    usage: /<command> <delete>
