Changed custom storage as it isn't possible to create you're own "item". Everything has therefore been done with lore on a chest.
Also added a YAML class for possibly storing player data down the line.

Blocks broken from pickaxe enchant now gets "stored" in the storage. All done within block handler

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,4 +13,4 @@ commands:
   storage:
     description: Everything to do with custom storage
     permission-message: You do not have permission to use this command
-    usage: /<command> <delete>
+    usage: /<command> <delete | capacity>
